Fix alignleft/alignright when sidebar is active.

--- a/assets/css/src/content.css
+++ b/assets/css/src/content.css
@@ -228,6 +228,23 @@
 	}
 }
 
+@media (--sidebar-query) {
+
+	.has-sidebar .page-content > .alignleft,
+	.has-sidebar .entry-content > .alignleft,
+	.has-sidebar .entry-summary > .alignleft,
+	.has-sidebar .wp-block-group__inner-container > .alignleft {
+		margin-left: calc((75vw - 2rem - var(--content-width)) / 2);
+	}
+
+	.has-sidebar .page-content > .alignright,
+	.has-sidebar .entry-content > .alignright,
+	.has-sidebar .entry-summary > .alignright,
+	.has-sidebar .wp-block-group__inner-container > .alignright {
+		margin-right: calc((75vw - 2rem - var(--content-width)) / 2);
+	}
+}
+
 /*--------------------------------------------------------------
 ## Custom block colors.
 --------------------------------------------------------------*/
